fixed emaildetailpage padding and added breakpoints for icons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -137,5 +137,10 @@
         min-width: 300px;
         max-width: 300px
     }
+
+    .min-max-height-40px {
+        min-height: 40px;
+        max-height: 40px
+    }
 }
 
