--- a/styles/globals.css
+++ b/styles/globals.css
@@ -142,5 +142,10 @@
         min-height: 40px;
         max-height: 40px
     }
+
+    .top-90 {
+        top: 102px;
+        z-index: 999;
+    }
 }
 
