--- a/styles/globals.css
+++ b/styles/globals.css
@@ -218,5 +218,85 @@
         padding-left: 6px;
         padding-top: 6px;
     }
+
+    .document-section-bg-palette {
+        background-color: #f1f3f4;
+    }
+
+    .document-h {
+        min-height: 350px;
+        max-height: 350px;
+    }
+
+    .doc-sec-hed-text-color {
+        color: #202124;
+    }
+
+    .bord {
+        max-height: 30px;
+        min-height: 30px;
+        width:1px;
+        @apply bg-gray-200;
+    }
+
+    .doc-sec-hed-bg-color {
+        background-color: #bdc1c6;
+    }
+
+    .font-14 {
+        font-size: 15px;
+    }
+
+    .pt-4px {
+        padding-top: 4px;
+    }
+
+    .text-16 {
+        font-size: 16px;
+    }
+
+    .document-content-header-icon {
+        @apply h-8 w-8 hover:bg-gray-100 hover:text-black header-icon-color border-0 !important;
+    }
+
+    .hover-effy {
+        border-radius: 100%;
+        @apply bg-gray-100;
+    }
+
+    .px6 {
+        padding-top:6px;    
+    }
+
+    .doc-card {
+        height: 340px;
+        width: 210px;
+    }
+
+    .doc-card-info {
+        width: 100%;
+        height: 77px;
+    }
+
+    .hover-doc-info {
+        border-radius: 100%;
+        @apply bg-gray-300;
+    }
+
+    .m-5px {
+        margin: 20px;
+    }
+
+    .max-w-1230px {
+        max-width: 1230px;
+    }
+
+    .mr-8px {
+        margin-right: 8px;
+    }
+
+    .max-w-1230px {
+        max-width: 1220px;
+    }
 }
 
